fix jump on flip + adjust style on cards container

--- a/src/components/styles/mozaique.css
+++ b/src/components/styles/mozaique.css
@@ -5,4 +5,7 @@
 .cardsContainer {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
 }
